<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="15dp">

    <TextView
        android:id="@+id/etInputInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/putpw"
        android:textColor="@color/darkBlue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInputInfo">

        <EditText
            android:id="@+id/etPasscode1"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/etPasscode2"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/etPasscode3"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/etPasscode4"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:inputType="numberPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout">

        <Button
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/_3"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_4"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_5"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/_6"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <Button
            android:id="@+id/btn7"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_7"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_8"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/_9"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout3">

        <Button
            android:id="@+id/btnclear"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/clear"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_0"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btndelete"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/delete"
            android:textSize="15sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>